# onvifviewer

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  android_build_instructions.txt
android/: AndroidManifest.xml  AndroidManifest.xml.in  CMakeLists.txt  icon.xcf  splash.xcf
android/res/drawable/: splash.xml
android/res/values/: apptheme.xml
autotests/: CMakeLists.txt
cmake/: FindQtAV.cmake
desktop/: CMakeLists.txt  appstream-metainfo.its  generateIcons.sh  net.meijn.onvifviewer.appdata.xml  net.meijn.onvifviewer.appdata.xml.in  net.meijn.onvifviewer.appdata.xml.template  net.meijn.onvifviewer.desktop  net.meijn.onvifviewer.desktop.in  net.meijn.onvifviewer.desktop.template
fastlane/: Appfile  CMakeLists.txt  Fastfile  convert_appstream_to_fastlane.py  prepare_metadata_for_alpha.py
fastlane/metadata/android/de-DE/: full_description.txt  short_description.txt
fastlane/metadata/android/en-GB/: full_description.txt  short_description.txt
fastlane/metadata/android/en-GB/changelogs/: 1000.txt  1100.txt  12001.txt  13002.txt  500.txt  600.txt  700.txt  800.txt  900.txt
fastlane/metadata/android/fr/: full_description.txt  short_description.txt
fastlane/metadata/android/it-IT/: full_description.txt  short_description.txt
fastlane/metadata/android/nb-NO/: short_description.txt
fastlane/metadata/android/nl/: short_description.txt
fastlane/metadata/android/nl-NL/: full_description.txt
fastlane/metadata/android/no-NO/: full_description.txt
fastlane/metadata/android/pt/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/pt-BR/: full_description.txt  short_description.txt
fastlane/metadata/android/ru/: full_description.txt  short_description.txt
fastlane/metadata/android/sv/: full_description.txt  short_description.txt
fastlane/metadata/android/tr/: full_description.txt  short_description.txt
fastlane/metadata/android/zh-HANS-CN/: full_description.txt  short_description.txt
flatpak/: net.meijn.onvifviewer.json  net.meijn.onvifviewer.yaml
libOnvifConnect/: CMakeLists.txt  OnvifConnectConfig.cmake.in  onvifdeviceconnection.cpp  onvifdeviceconnection.h  onvifdeviceconnection_p.h  onvifdeviceinformation.cpp  onvifdeviceinformation.h  onvifdeviceservice.cpp  onvifdeviceservice.h  onvifmedia2service.cpp  onvifmedia2service.h  onvifmediaprofile.cpp  onvifmediaprofile.h  onvifmediaservice.cpp  onvifmediaservice.h  onvifptzservice.cpp  onvifptzservice.h
po/: CMakeLists.txt  LINGUAS  de.po  fr.po  hu.po  it.po  nb_NO.po  nl.po  nl_NL.po  onvifviewer.pot  pl.po  pt.po  pt_BR  pt_BR.po  ru.po  sv.po  tr.po  update_translation.sh  zh_HANS-CN.po
src/: AboutPage.qml  AddDemoCamera.qml  CMakeLists.txt  DeviceSettingsPage.qml  DeviceViewerPage.qml  DiscoverCamera.qml  OnvifCameraViewer.qml  OnvifSnapshotViewer.qml  OnvifStreamViewer.qml  OverviewPage.qml  breeze-icons.qrc  main.cpp  main.qml  onvifdevice.cpp  onvifdevice.h  onvifdevicediscover.cpp  onvifdevicediscover.h  onvifdevicemanager.cpp  onvifdevicemanager.h  onvifdevicemanagermodel.cpp  onvifdevicemanagermodel.h  onvifsnapshotdownloader.cpp  onvifsnapshotdownloader.h  onvifsnapshotviewer.cpp  onvifsnapshotviewer.h  qml.qrc  qtquickcontrols2.conf
src/+qtav/: OnvifStreamViewer.qml
src/connection/: onvifdeviceconnection.cpp  onvifdeviceconnection.h  onvifdeviceinformation.cpp  onvifdeviceinformation.h  onvifdeviceservice.cpp  onvifdeviceservice.h  onvifmedia2service.cpp  onvifmedia2service.h  onvifmediaprofile.cpp  onvifmediaprofile.h  onvifmediaservice.cpp  onvifmediaservice.h  onvifptzservice.cpp  onvifptzservice.h
