install(FILES net.meijn.onvifviewer.appdata.xml DESTINATION ${KDE_INSTALL_METAINFODIR})
install(FILES net.meijn.onvifviewer.desktop DESTINATION ${KDE_INSTALL_APPDIR})
install(FILES ApplicationIcon.svg DESTINATION ${KDE_INSTALL_ICONDIR}/hicolor/scalable/apps RENAME net.meijn.onvifviewer.svg)
install(FILES ApplicationIcon-48.png DESTINATION ${KDE_INSTALL_ICONDIR}/hicolor/48x48/apps RENAME net.meijn.onvifviewer.png)
